redis/redis-deployment.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
    name: redis
    namespace: redis
spec:
    replicas: 1
    selector:
        matchLabels:
            app: redis
    template:
        metadata:
            labels:
                app: redis
                name: redis
        spec:
            containers:
                - name: redis
                  image: redis:7.2.0
                  args: ["--appendonly", "no", "--save", ""]
                  ports:
                      - name: redis
                        containerPort: 6379
                  resources:
                      limits:
                          memory: "256Mi"
                          cpu: "500m"
