redis/redis-service.yml
---
apiVersion: v1
kind: Service
metadata:
    name: redis
    namespace: redis
spec:
    selector:
        app: redis
    ports:
        - name: redis-port
          protocol: TCP
          port: 6379
          targetPort: 6379
