redis/redis-ingress.yml
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRouteTCP
metadata:
    name: redis
    namespace: redis

spec:
    entryPoints:
        - redis
    routes:
        - match: HostSNI(`*`)
          services:
              - name: redis
                port: 6379
